Connect to Cosmos

--- a/Fantasty Football API/Fantasty Football API.csproj
+++ b/Fantasty Football API/Fantasty Football API.csproj
@@ -5,9 +5,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Fantasty_Football_API</RootNamespace>
+    <UserSecretsId>759f22c7-4a9d-4536-8e1e-85d1d2203932</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.29.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
