--- a/Fantasty Football API/appsettings.json
+++ b/Fantasty Football API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosSetting": {
+    "DatabaseName": "Use secrets.json override",
+    "ContainerName": "Use secrets.json override",
+    "Endpoint": "Use secrets.json override",
+    "ApiKey": "Use secrets.json override"
+  }
 }
